--- a/flex-gallery/flex-gallery.html
+++ b/flex-gallery/flex-gallery.html
@@ -4,7 +4,8 @@
 <head>
     <meta chaset="utf-8">
     <title>My Gallery</title>
-
+    <!-- 用于实现点击图片查看大图的效果 -->
+    <!-- 但好像本地预览不了 -->
     <link rel="stylesheet" href="https://cdn.bootcss.com/magnific-popup.js/1.1.0/magnific-popup.min.css">
     <style>
         * {
@@ -18,6 +19,7 @@
         /* 设置上下边距（主体框） */
         .gallery-section {
             width: 100%;
+            height: 100vh;
             padding: 60px 0;
             background: #eee;
         }
@@ -26,7 +28,7 @@
         .inner-width {
             /* 100%与1200px取小的满足 */
             width: 100%;
-            max-width: 1200px;
+            max-width: 1000px;
             /* 块元素的左右居中 */
             margin: auto;
             padding: 0 20px;
@@ -109,36 +111,35 @@
             <h1>My Gallery</h1>
             <div class="border"></div>
             <div class="gallery">
-
-                <a herf="./img/1.jpg" class="image">
+                <a herf="imgs/1.jpg" class="image">
                     <img src="./imgs/1.jpg" alt="">
                 </a>
 
-                <a herf="./img/2.jpg" class="image">
+                <a herf="./imgs/2.jpg" class="image">
                     <img src="./imgs/2.jpg" alt="">
                 </a>
 
-                <a herf="./img/3.jpg" class="image">
+                <a herf="./imgs/3.jpg" class="image">
                     <img src="./imgs/3.jpg" alt="">
                 </a>
 
-                <a herf="./img/4.jpg" class="image">
+                <a herf="./imgs/4.jpg" class="image">
                     <img src="./imgs/4.jpg" alt="">
                 </a>
 
-                <a herf="./img/5.jpg" class="image">
+                <a herf="./imgs/5.jpg" class="image">
                     <img src="./imgs/5.jpg" alt="">
                 </a>
 
-                <a herf="./img/6.jpg" class="image">
+                <a herf="./imgs/6.jpg" class="image">
                     <img src="./imgs/6.jpg" alt="">
                 </a>
 
-                <a herf="./img/7.jpg" class="image">
+                <a herf="./imgs/7.jpg" class="image">
                     <img src="./imgs/7.jpg" alt="">
                 </a>
 
-                <a herf="./img/8.jpg" class="image">
+                <a herf="./imgs/8.jpg" class="image">
                     <img src="./imgs/8.jpg" alt="">
                 </a>
 
