fix: 解决滚动条隐藏的适配问题

--- a/baidu-front-end-demo1-day12-15/index.html
+++ b/baidu-front-end-demo1-day12-15/index.html
@@ -100,14 +100,21 @@
     <header>
       <h1>Messages</h1>
       <div class="profile">
-        <div class="avatar"><img src="" alt="my avatar" title="more..." /></div>
+        <a class="avatar" href="#">
+          <img src="imgs/avatars/avatar_02.png" alt="my avatar" title="more..." />
+          <div class="status"></div>
+          <span>Jordan J.</span>
+          <span></span>
+        </a>
       </div>
     </header>
+
     <div class="chats">
       <div class="chat-list">
         <form class="search">
           <input type="text" name="search" value="" placeholder="Search" />
         </form>
+
         <div class="list">
           <div class="card selected">
             <div class="avatar"></div>
