fix: menu栏垂直高度过小时icon遮盖问题

--- a/baidu-front-end-demo1-day12-15/index.html
+++ b/baidu-front-end-demo1-day12-15/index.html
@@ -5,6 +5,7 @@
   <title>Messages</title>
   <link rel="stylesheet" href="style/deafult.css" />
   <link rel="stylesheet" href="style/menu.css" />
+  <link rel="stylesheet" href="style/secordary.css" />
   <link rel="stylesheet" href="style/header.css" />
   <link rel="stylesheet" href="style/simulate-js.css" />
   <link rel="stylesheet" href="style/chats.css" />
@@ -100,12 +101,12 @@
     <header>
       <h1>Messages</h1>
       <div class="profile">
-        <a class="avatar" href="#">
-          <img src="imgs/avatars/avatar_02.png" alt="my avatar" title="more..." />
-          <div class="status"></div>
+        <img src="imgs/avatars/avatar_02.png" alt="my avatar" title="more..." />
+        <div class="status"></div>
+        <a class="me" href="#">
           <span>Jordan J.</span>
-          <span></span>
         </a>
+        <span>Administrator</span>
       </div>
     </header>
 
@@ -121,8 +122,9 @@
             <div class="name">
               Bessie Berry
             </div>
-            <div ></div>
-            <div class="info">I pay for the 4Mb/sec down, 512 Kb/sec up service from O2. In fact, it's relatively quick, and stable...</div>
+            <div></div>
+            <div class="info">I pay for the 4Mb/sec down, 512 Kb/sec up service from O2. In fact, it's relatively quick,
+              and stable...</div>
           </div>
           <div class="card">test</div>
           <div class="card">test</div>
