--- a/baidu-front-end-demo1-day12-15/index.html
+++ b/baidu-front-end-demo1-day12-15/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <!-- menu -->
   <nav class="menu">
     <div class="menu-buttons">
       <button type="button" class="circle blue selected"></button>
@@ -31,6 +32,7 @@
     </div>
   </nav>
 
+  <!-- secondary -->
   <aside class="secondary">
     <div class="part1">
       <div class="classification settings">MENU</div>
@@ -97,19 +99,22 @@
     </div>
   </aside>
 
+  <!-- main -->
   <div class="main">
+    <!-- header -->
     <header>
       <h1>Messages</h1>
       <div class="profile">
         <img src="imgs/avatars/avatar_02.png" alt="my avatar" title="more..." />
         <div class="status"></div>
-        <a class="me" href="#">
-          <span>Jordan J.</span>
-        </a>
-        <span>Administrator</span>
+        <div class="description">
+          <span class="name"><a class="me" href="#">Ceynri</a></span>
+        </div>
+        <a href="#"><div class="dropdown-button"></div></a>
       </div>
     </header>
 
+    <!-- chats -->
     <div class="chats">
       <div class="chat-list">
         <form class="search">
@@ -138,9 +143,9 @@
           <div class="card">test</div>
           <div class="card">test</div>
         </div>
-
       </div>
 
+      <!-- open-chat -->
       <div class="open-chat">
       </div>
     </div>
