modify: 一点微小的修改

--- a/flex-gallery/flex-gallery.html
+++ b/flex-gallery/flex-gallery.html
@@ -5,7 +5,7 @@
     <meta chaset="utf-8">
     <title>My Gallery</title>
     <!-- 用于实现点击图片查看大图的效果 -->
-    <!-- 但好像本地预览不了 -->
+    <!-- 但好像预览不了 -->
     <link rel="stylesheet" href="https://cdn.bootcss.com/magnific-popup.js/1.1.0/magnific-popup.min.css">
     <style>
         * {
@@ -99,10 +99,6 @@
         }
     </style>
 
-    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -112,35 +108,35 @@
             <div class="border"></div>
             <div class="gallery">
                 <a herf="imgs/1.jpg" class="image">
-                    <img src="./imgs/1.jpg" alt="">
+                    <img src="imgs/1.jpg" alt="">
                 </a>
 
-                <a herf="./imgs/2.jpg" class="image">
-                    <img src="./imgs/2.jpg" alt="">
+                <a herf="imgs/2.jpg" class="image">
+                    <img src="imgs/2.jpg" alt="">
                 </a>
 
-                <a herf="./imgs/3.jpg" class="image">
-                    <img src="./imgs/3.jpg" alt="">
+                <a herf="imgs/3.jpg" class="image">
+                    <img src="imgs/3.jpg" alt="">
                 </a>
 
-                <a herf="./imgs/4.jpg" class="image">
-                    <img src="./imgs/4.jpg" alt="">
+                <a herf="imgs/4.jpg" class="image">
+                    <img src="imgs/4.jpg" alt="">
                 </a>
 
-                <a herf="./imgs/5.jpg" class="image">
-                    <img src="./imgs/5.jpg" alt="">
+                <a herf="imgs/5.jpg" class="image">
+                    <img src="imgs/5.jpg" alt="">
                 </a>
 
-                <a herf="./imgs/6.jpg" class="image">
-                    <img src="./imgs/6.jpg" alt="">
+                <a herf="imgs/6.jpg" class="image">
+                    <img src="imgs/6.jpg" alt="">
                 </a>
 
-                <a herf="./imgs/7.jpg" class="image">
-                    <img src="./imgs/7.jpg" alt="">
+                <a herf="imgs/7.jpg" class="image">
+                    <img src="imgs/7.jpg" alt="">
                 </a>
 
-                <a herf="./imgs/8.jpg" class="image">
-                    <img src="./imgs/8.jpg" alt="">
+                <a herf="imgs/8.jpg" class="image">
+                    <img src="imgs/8.jpg" alt="">
                 </a>
 
             </div>
